Bug 440877 - Discover crashes in FlatpakTransactionThread::~FlatpakTransactionThread()
Summary: Discover crashes in FlatpakTransactionThread::~FlatpakTransactionThread()
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.22.4
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: drkonqi
: 443878 449277 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-11 20:32 UTC by BootZ
Modified: 2022-02-08 09:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
attachment-11090-0.html (1.87 KB, text/html)
2021-10-24 14:19 UTC, BootZ
Details
New crash information added by DrKonqi (3.44 KB, text/plain)
2022-01-28 01:25 UTC, clin
Details
Full stacktrace of the crash (123.93 KB, text/plain)
2022-01-28 17:37 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BootZ 2021-08-11 20:32:31 UTC
Application: plasma-discover (5.22.4)

Qt Version: 5.15.2
Frameworks Version: 5.84.0
Operating System: Linux 5.13.8-1-default x86_64
Windowing System: X11
Drkonqi Version: 5.22.4
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:
Installing flatpak app (two at the same time). Suddenly the app creashed without me interfering

- Custom settings of the application:
added flathub

The crash does not seem to be reproducible.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f5f91c159c0 (LWP 7410))]
[KCrash Handler]
#6  g_type_check_instance_is_fundamentally_a (type_instance=type_instance@entry=0x556842b35300, fundamental_type=fundamental_type@entry=80) at ../gobject/gtype.c:4082
#7  0x00007f5f92d829c5 in g_object_unref (_object=0x556842b35300) at ../gobject/gobject.c:3421
#8  0x00007f5f683077be in FlatpakTransactionThread::~FlatpakTransactionThread (this=<optimized out>, this=<optimized out>) at /usr/src/debug/discover-5.22.4-1.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:77
#9  FlatpakTransactionThread::~FlatpakTransactionThread (this=<optimized out>, this=<optimized out>) at /usr/src/debug/discover-5.22.4-1.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:79
#10 FlatpakJobTransaction::~FlatpakJobTransaction (this=<optimized out>, this=<optimized out>) at /usr/src/debug/discover-5.22.4-1.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.cpp:30
#11 0x00007f5f68307879 in FlatpakJobTransaction::~FlatpakJobTransaction (this=<optimized out>, this=<optimized out>) at /usr/src/debug/discover-5.22.4-1.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.cpp:31
#12 0x00007f5f9505fcff in QObject::event (this=0x7f5f4c017b30, e=0x556844d729c0) at kernel/qobject.cpp:1301
#13 0x00007f5f96119a7f in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7f5f4c017b30, e=0x556844d729c0) at kernel/qapplication.cpp:3632
#14 0x00007f5f9503396a in QCoreApplication::notifyInternal2 (receiver=0x7f5f4c017b30, event=0x556844d729c0) at kernel/qcoreapplication.cpp:1064
#15 0x00007f5f950369b7 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5568421a5780) at kernel/qcoreapplication.cpp:1821
#16 0x00007f5f9508b7d3 in postEventSourceDispatch (s=s@entry=0x556842277e80) at kernel/qeventdispatcher_glib.cpp:277
#17 0x00007f5f9343f80f in g_main_dispatch (context=0x7f5f88005000) at ../glib/gmain.c:3337
#18 g_main_context_dispatch (context=0x7f5f88005000) at ../glib/gmain.c:4055
#19 0x00007f5f9343fb98 in g_main_context_iterate (context=context@entry=0x7f5f88005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4131
#20 0x00007f5f9343fc4f in g_main_context_iteration (context=0x7f5f88005000, may_block=1) at ../glib/gmain.c:4196
#21 0x00007f5f9508ae54 in QEventDispatcherGlib::processEvents (this=0x556842283280, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f5f9503236b in QEventLoop::exec (this=this@entry=0x7ffdcea570e0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#23 0x00007f5f9503a650 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x00007f5f9547e1dc in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#25 0x00007f5f961199f5 in QApplication::exec () at kernel/qapplication.cpp:2824
#26 0x0000556841532f90 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/discover-5.22.4-1.1.x86_64/discover/main.cpp:196
[Inferior 1 (process 7410) detached]

Possible duplicates by query: bug 439668.

Reported using DrKonqi
Comment 1 Nate Graham 2021-10-17 23:25:43 UTC
*** Bug 443878 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2021-10-19 18:47:27 UTC
I've been trying hard to reproduce this, still am unable to.
This seems to be an opensuse-specific issue? which flatpak version do you have over there?
Comment 3 Tommaso Fonda 2021-10-24 13:48:09 UTC
(In reply to Aleix Pol from comment #2)
> I've been trying hard to reproduce this, still am unable to.
> This seems to be an opensuse-specific issue?
I don't know, some openSUSE guy actually suggested that it could be an upstream bug.

(In reply to Aleix Pol from comment #2)
> which flatpak version do you have over there?
Flatpak 1.12.1 at the moment, but with the latest KDE Plasma update (5.23) the issue seems to be fixed. I don't know whether flatpak was updated as well, recently.
Comment 4 BootZ 2021-10-24 14:19:11 UTC
Created attachment 142823 [details]
attachment-11090-0.html

Hi, i'm not able to test thuis anymore.

Outlook voor Android<https://aka.ms/AAb9ysg> downloaden
________________________________
From: Tommaso Fonda <bugzilla_noreply@kde.org>
Sent: Sunday, October 24, 2021 3:48:09 PM
To: d_bootsma@hotmail.com <d_bootsma@hotmail.com>
Subject: [Discover] [Bug 440877] Discovery app crashes in FlatpakTransactionThread::~FlatpakTransactionThread()

https://bugs.kde.org/show_bug.cgi?id=440877

--- Comment #3 from Tommaso Fonda <fondatommaso2@gmail.com> ---
(In reply to Aleix Pol from comment #2)
> I've been trying hard to reproduce this, still am unable to.
> This seems to be an opensuse-specific issue?
I don't know, some openSUSE guy actually suggested that it could be an upstream
bug.

(In reply to Aleix Pol from comment #2)
> which flatpak version do you have over there?
Flatpak 1.12.1 at the moment, but with the latest KDE Plasma update (5.23) the
issue seems to be fixed. I don't know whether flatpak was updated as well,
recently.

--
You are receiving this mail because:
You reported the bug.
Comment 5 clin 2022-01-28 01:25:17 UTC
Created attachment 146006 [details]
New crash information added by DrKonqi

plasma-discover (5.24.80) using Qt 5.15.2

- What I was doing when the application crashed:
I merely opened a downloaded flatpakref, in this case org.kde.falkon.

-- Backtrace (Reduced):
#4  g_type_check_instance_is_fundamentally_a (type_instance=type_instance@entry=0x7f7f705a7f60, fundamental_type=fundamental_type@entry=80) at ../gobject/gtype.c:4093
[...]
#6  0x00007f7fac4f4495 in FlatpakResource::FlatpakResource (this=<optimized out>, component=..., installation=<optimized out>, parent=<optimized out>, this=<optimized out>, component=..., installation=<optimized out>, parent=<optimized out>) at /usr/src/debug/discover-5.24.80git.20220125T014524~bcdf113f1-ku.5.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakResource.cpp:46
#7  0x00007f7fac4fb6e3 in FlatpakBackend::addAppFromFlatpakRef (this=0x555cce39c2c0, url=..., stream=0x555cce3fcb20) at /usr/src/debug/discover-5.24.80git.20220125T014524~bcdf113f1-ku.5.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp:725
#8  0x00007f7fac4fcd4d in FlatpakFetchRemoteResourceJob::processFile (this=0x555cce3fcd70, fileUrl=...) at /usr/src/debug/discover-5.24.80git.20220125T014524~bcdf113f1-ku.5.1.x86_64/libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp:297
#9  0x00007f800bf9149e in QObject::event (this=0x555cce3fcb20, e=0x555cce3fdb40) at kernel/qobject.cpp:1314
Comment 6 Nicolas Fella 2022-01-28 12:56:08 UTC
*** Bug 449277 has been marked as a duplicate of this bug. ***
Comment 7 postix 2022-01-28 17:37:07 UTC
Created attachment 146017 [details]
Full stacktrace of the crash

Can confirm on

Operating System: openSUSE Tumbleweed 20220126
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.2-1-default (64-bit)
Graphics Platform: X11

when I installed Geogebra via Discover.
Comment 8 postix 2022-01-28 17:47:23 UTC
Additional to my comment 7 above: Flatpak Version 1.12.4-1.1
Comment 9 Aleix Pol 2022-01-31 18:25:50 UTC
Can reproduce with G_DEBUG=fatal-warnings plasma-discover --backends flatpak

(process:76008): GLib-GObject-CRITICAL **: 19:24:16.429: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
#0  0x00007ffff26b3a6b in g_logv () at /usr/lib/libglib-2.0.so.0
#1  0x00007ffff26b3d44 in g_log () at /usr/lib/libglib-2.0.so.0
#2  0x00007fff902163cb in FlatpakTransactionThread::~FlatpakTransactionThread() (this=0x5555569c9e70) at /home/apol/devel/frameworks/discover/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:73
#3  0x00007fff90216429 in FlatpakTransactionThread::~FlatpakTransactionThread() (this=0x5555569c9e70) at /home/apol/devel/frameworks/discover/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:72
#4  0x00007fff902149ee in FlatpakJobTransaction::~FlatpakJobTransaction() (this=0x7fffe80073d0) at /home/apol/devel/frameworks/discover/libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.cpp:34
#5  0x00007fff90214a59 in FlatpakJobTransaction::~FlatpakJobTransaction() (this=0x7fffe80073d0) at /home/apol/devel/frameworks/discover/libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.cpp:29
#6  0x00007ffff586fe7f in QObject::event(QEvent*) (this=0x7fffe80073d0, e=0x555556ae8570) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qobject.cpp:1301
#7  0x00007ffff6df26cf in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x7fffe80073d0, e=0x555556ae8570) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3632
#8  0x00007ffff58439ba in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x7fffe80073d0, event=0x555556ae8570) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064
#9  0x00007ffff5846a07 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=0x0, event_type=0, data=0x55555561f4a0) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1821
#10 0x00007ffff589b963 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x55555564b230) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:277
#11 0x00007ffff26aaf13 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#12 0x00007ffff27010d9 in  () at /usr/lib/libglib-2.0.so.0
#13 0x00007ffff26a8485 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#14 0x00007ffff589afe4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x5555555ff120, flags=...) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423
#15 0x00007ffff58423bb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fffffffd8e0, flags=..., flags@entry=...) at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/global/qflags.h:69
#16 0x00007ffff584a6a0 in QCoreApplication::exec() () at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/global/qflags.h:121
#17 0x0000555555577b6b in main(int, char**) (argc=3, argv=0x7fffffffdfd8) at /home/apol/devel/frameworks/discover/discover/main.cpp:217
(gdb)
Comment 10 Aleix Pol 2022-01-31 18:48:17 UTC
Git commit 4eba8e048ae33d7f17f1af8e952af89884ecd041 by Aleix Pol.
Committed on 31/01/2022 at 18:48.
Pushed by apol into branch 'master'.

flatpak: ensure we don't unref transactions twice

M  +0    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp

https://invent.kde.org/plasma/discover/commit/4eba8e048ae33d7f17f1af8e952af89884ecd041
Comment 11 Aleix Pol 2022-01-31 18:48:52 UTC
Git commit 0cfb56416ac586431182f216bdb6718a73a8a4ec by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 31/01/2022 at 18:48.
Pushed by apol into branch 'Plasma/5.24'.

flatpak: ensure we don't unref transactions twice


(cherry picked from commit 4eba8e048ae33d7f17f1af8e952af89884ecd041)

M  +0    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp

https://invent.kde.org/plasma/discover/commit/0cfb56416ac586431182f216bdb6718a73a8a4ec