flatpak: ensure we don't unref transactions twice

BUG: 440877


(cherry picked from commit 4eba8e048ae33d7f17f1af8e952af89884ecd041)